change path of images

--- a/_posts/CTFs/HeroCTF_2024/Misc/2024-10-26-Einstein.md
+++ b/_posts/CTFs/HeroCTF_2024/Misc/2024-10-26-Einstein.md
@@ -13,23 +13,23 @@ permalink: /CTFs/HeroCTF_2024/Misc/Einstein
 
 # Einstein
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_eistein_enonce.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_eistein_enonce.png)
 
 So in this challenge, we connect to an `SSH` server and we list the files:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_eistein_files.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_eistein_files.png)
 
 In the `learn.c` file we see the following code where the `cat` binary is called as is but not like `/bin/cat`:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_eistein_learn.c.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_eistein_learn.c.png)
 
 So we can create our own `cat` program and put its path at the beginning of the `PATH` variable:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_eistein_cat.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_eistein_cat.png)
 
 > Note the use of `-p` in the `bash` command. This allows us to get the `pid` of the effective user (eistein) instead of the user running the program (user)
 {: .prompt-warning}
 
 Now we can run the `learn` binary and get the flag:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_eistein_flag.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_eistein_flag.png)
