--- a/_posts/CTFs/HeroCTF_2024/Misc/2024-10-26-Moo.md
+++ b/_posts/CTFs/HeroCTF_2024/Misc/2024-10-26-Moo.md
@@ -13,38 +13,38 @@ permalink: /CTFs/HeroCTF_2024/Misc/Moo
 
 # Moo
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_enonce.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_enonce.png)
 
 In this challenge, we need to escape the restricted shell we are in.
 
 First we can try some commands to see what is working and what is not:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_commands.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_commands.png)
 
 So as we can see, a lot of commands are restricted. But the `echo` one is not.
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_echo.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_echo.png)
 
 So now we know that our path is in the `/usr/local/rbin` folder. In this folder are the following files:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_rbin.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_rbin.png)
 
 First I started looking at the `rbash` file:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_rbash.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_rbash.png)
 
 I thought that it has something to do with the `bash -r` but in fact it was linked to the `cowsay`. If we check the [GTFObins](https://gtfobins.github.io/gtfobins/cowsay/) page of this binary we see that we can in fact run commands with it:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_gtfobins.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_gtfobins.png)
 
 Now that we know that and that we know we can run `vim` (present in our path), we can write a file that will execute a shell:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_vim.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_vim.png)
 
 Now we can save it and run it with `cowsay`:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_escape.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_escape.png)
 
 Now that we escaped, we can run any command in the terminal. Lets try the one they told us we can't run. And... Voila:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_flag.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_misc_moo_flag.png)
