--- a/_posts/CTFs/HeroCTF_2024/Steganographie/2024-10-26-Zipper.md
+++ b/_posts/CTFs/HeroCTF_2024/Steganographie/2024-10-26-Zipper.md
@@ -14,16 +14,16 @@ permalink: /CTFs/HeroCTF_2024/Steganographie/Zipper
 
 # Zipper
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_Stega_Zipper_enonce.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_Stega_Zipper_enonce.png)
 
 In this challenge, we have access to [this zip](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/HeroCTF_2024/Stega/secretzip.zip). First I tried to unzip it and we find a PDF with two images talking about the `zip` format. I tried to run `binwalk` on them with no luck. But after a wile, I tried to run it on the `zip` itself:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_Stega_Zipper_binwalk.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_Stega_Zipper_binwalk.png)
 
 As we can see, we have the `zip` containing the folder `whatiszip`, a bunch of other `zip` or `zlib` files but also a `PNG` image. We use `binwalk` to extract it but the classic `-e` won't work. In this case, we use the `--dd=.*` option to recover every files.
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_Stega_Zipper_binwalkFinal.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_Stega_Zipper_binwalkFinal.png)
 
 And the `PNG` image gives us the flag:
 
-![[https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_Stega_Zipper_flag.png]]
+![image](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/refs/heads/main/_posts/CTFs/HeroCTF_2024/photos/HeroCTF_2024_Stega_Zipper_flag.png)
